fixes to last waves

--- a/scripts/vscripts/spawns.kv
+++ b/scripts/vscripts/spawns.kv
@@ -625,5 +625,198 @@
                 }
             }
         }
+        "07"
+        {
+            "Options"
+            {
+                "00"
+                {
+                    "Creatures"
+                    {
+                        "00"
+                        {
+                            "unit_name" "npc_dota_creature_ancient_apparition"
+                            "delay" "0"
+                            "interval"  "140"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "01"
+                        {
+                            "unit_name" "npc_dota_roshan_mob"
+                            "delay" "0"
+                            "interval"  "50"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "02"
+                        {
+                            "unit_name" "npc_dota_creature_mini_roshan"
+                            "delay" "15"
+                            "interval"  "43"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "03"
+                        {
+                            "unit_name" "npc_dota_lizard"
+                            "delay" "0"
+                            "interval"  "45"
+                            "min_size"  "4"
+                            "max_size"  "4"
+                        }
+                    }
+                }
+            }
+        }
+        "08"
+        {
+            "NeverEnd"  "1"
+            "Options"
+            {
+                "00"
+                {
+                    "Creatures"
+                    {
+                        "00"
+                        {
+                            "unit_name" "npc_dota_creature_ogre_boss"
+                            "delay" "0"
+                            "interval"  "150"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "01"
+                        {
+                            "unit_name" "npc_dota_creature_big_bear"
+                            "delay" "20"
+                            "interval"  "100"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "02"
+                        {
+                            "unit_name" "npc_dota_creature_king_wolf"
+                            "delay" "40"
+                            "interval"  "70"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "03"
+                        {
+                            "unit_name" "npc_dota_creature_tiny_boss"
+                            "delay" "60"
+                            "interval"  "130"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "04"
+                        {
+                            "unit_name" "npc_dota_creature_big_ghost"
+                            "delay" "80"
+                            "interval"  "80"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "05"
+                        {
+                            "unit_name" "npc_dota_ghost"
+                            "delay" "100"
+                            "interval"  "27"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "06"
+                        {
+                            "unit_name" "npc_dota_dragon"
+                            "delay" "120"
+                            "interval"  "80"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "07"
+                        {
+                            "unit_name" "npc_dota_demon"
+                            "delay" "0"
+                            "interval"  "75"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "08"
+                        {
+                            "unit_name" "npc_dota_wolf_fang"
+                            "delay" "40"
+                            "interval"  "100"
+                            "min_size"  "4"
+                            "max_size"  "5"
+                        }
+                        "09"
+                        {
+                            "unit_name" "npc_dota_creature_shroom"
+                            "delay" "0"
+                            "interval"  "43"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "10"
+                        {
+                            "unit_name" "npc_dota_creature_corpselord"
+                            "delay" "0"
+                            "interval"  "30"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "11"
+                        {
+                            "unit_name" "npc_dota_creature_troll_healer"
+                            "delay" "0"
+                            "interval"  "55"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "12"
+                        {
+                            "unit_name" "npc_dota_splitter_large"
+                            "delay" "0"
+                            "interval"  "120"
+                            "min_size"  "4"
+                            "max_size"  "4"
+                        }
+                        "13"
+                        {
+                            "unit_name" "npc_dota_creature_chicken"
+                            "delay" "190"
+                            "interval"  "90"
+                            "min_size"  "4"
+                            "max_size"  "4"
+                        }
+                        "14"
+                        {
+                            "unit_name" "npc_dota_creature_kappapult"
+                            "delay" "190"
+                            "interval"  "100"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                        "15"
+                        {
+                            "unit_name" "npc_dota_creature_big_satyr"
+                            "delay" "0"
+                            "interval"  "35"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                        }
+                        "16"
+                        {
+                            "unit_name" "npc_dota_creature_mini_roshan"
+                            "delay" "200"
+                            "interval"  "43"
+                            "min_size"  "2"
+                            "max_size"  "2"
+                        }
+                    }
+                }
+            }
+        }
     }
 }
