--- a/scripts/vscripts/spawns.kv
+++ b/scripts/vscripts/spawns.kv
@@ -302,18 +302,10 @@
                             "unit_name" "npc_dota_creature_treant"
                             "delay" "0"
                             "interval"  "20"
-                            "min_size"  "5"
-                            "max_size"  "7"
+                            "min_size"  "4"
+                            "max_size"  "6"
                         }
                         "01"
-                        {
-                            "unit_name" "npc_dota_creature_thing"
-                            "delay" "0"
-                            "interval"  "35"
-                            "min_size"  "4"
-                            "max_size"  "5"
-                        }
-                        "02"
                         {
                             "unit_name" "npc_dota_creature_forest_prophet"
                             "delay" "20"
@@ -321,7 +313,7 @@
                             "min_size"  "1"
                             "max_size"  "1"
                         }
-                        "03"
+                        "02"
                         {
                             "unit_name" "npc_dota_creature_shroom"
                             "delay" "35"
@@ -329,7 +321,7 @@
                             "min_size"  "2"
                             "max_size"  "2"
                         }
-                        "04"
+                        "03"
                         {
                             "unit_name" "npc_dota_creature_fang"
                             "delay" "70"
@@ -337,7 +329,7 @@
                             "min_size"  "4"
                             "max_size"  "4"
                         }
-                        "05"
+                        "04"
                         {
                             "unit_name" "npc_dota_creature_stump"
                             "delay" "100"
@@ -350,56 +342,49 @@
                 }
                 "01"
                 {
-                    "boss_unit" "npc_dota_creature_king_wolf"
+                    "boss_unit" "npc_dota_creature_disco_pony"
                     "Creatures"
                     {
                         "00"
                         {
-                            "unit_name" "npc_dota_wolf_fang"
+                            "unit_name" "npc_dota_creature_rabid"
                             "delay" "0"
-                            "interval"  "37"
+                            "interval"  "20"
                             "min_size"  "4"
-                            "max_size"  "5"
+                            "max_size"  "6"
                         }
                         "01"
                         {
-                            "unit_name" "npc_dota_creature_rabid"
-                            "delay" "0"
-                            "interval"  "30"
-                            "min_size"  "5"
-                            "max_size"  "6"
+                            "unit_name" "npc_dota_wolf_fang"
+                            "delay" "70"
+                            "interval"  "25"
+                            "min_size"  "4"
+                            "max_size"  "4"
                         }
                         "02"
                         {
-                            "unit_name" "npc_dota_creature_great_hound"
-                            "delay" "30"
-                            "interval"  "60"
+                            "unit_name" "npc_dota_creature_hound"
+                            "delay" "35"
+                            "interval"  "45"
                             "min_size"  "2"
                             "max_size"  "2"
                         }
                         "03"
                         {
-                            "unit_name" "npc_dota_creature_hound"
-                            "delay" "45"
-                            "interval"  "25"
-                            "min_size"  "3"
-                            "max_size"  "3"
-                        }
-                        "04"
-                        {
-                            "unit_name" "npc_dota_rhino"
-                            "delay" "60"
-                            "interval"  "90"
-                            "min_size"  "1"
-                            "max_size"  "1"
-                        }
-                        "05"
-                        {
                             "unit_name" "npc_dota_creature_pack_leader"
-                            "delay" "60"
+                            "delay" "20"
                             "interval"  "60"
                             "min_size"  "1"
                             "max_size"  "1"
+                        }
+                        "04"
+                        {
+                            "unit_name" "npc_dota_creature_great_hound"
+                            "delay" "100"
+                            "interval"  "3000"
+                            "min_size"  "1"
+                            "max_size"  "1"
+                            "mid_only"  "1"
                         }
                     }
                 }
