--- a/scripts/vscripts/maplogic/settings.kv
+++ b/scripts/vscripts/maplogic/settings.kv
@@ -1,6 +1,6 @@
 "MapInfo"
 {
-	"Horde_2p"
+	"horde_2p"
 	{
 	    "midLaneSpawner"            {
 	        "1" "spawner1"
@@ -10,6 +10,13 @@
             "5" "spawner2"
 	        "6" "spawner5"
         }
+        
+        "topLaneSpawner"            "spawner5"
+        "topLaneDestination"        "lane_top_pathcorner_badguys_4"
+        
+        "botLaneSpawner"            "spawner2"
+        "botLaneDestination"        "lane_bot_pathcorner_badguys_4"
+        
 	    "midLaneDestination"        "lane_mid_pathcorner_badguys_7"
 	    "midLaneFriendlySpawner"        "spawner7"
 	    "midLaneFriendlyDestination"    "lane_bot_pathcorner_goodguys_2"
