Time-based upgrades are now intact. Timing is bugged.

--- a/scripts/vscripts/HoardBRS/abilityList.kv
+++ b/scripts/vscripts/HoardBRS/abilityList.kv
@@ -2,21 +2,45 @@
 {
 	"UltraSkills"
 	{
-	    "Ultra1"
+	    "hordebrs_ultra_manaburn"
         {
 	        "Levels" "20"
             "Toggleable" "0"
         }
         
-        "Ultra2"
+        "hordebrs_ultra_puredmg"
+        {
+	        "Levels" "18"
+            "Toggleable" "0"
+        }
+        
+        "hordebrs_ultra_armor_aura"
         {
 	        "Levels" "20"
             "Toggleable" "0"
         }
         
-        "Ultra3"
+        "hordebrs_ultra_magic_amp_aura"
         {
 	        "Levels" "20"
+            "Toggleable" "0"
+        }
+        
+        "hordebrs_reduce_dmg"
+        {
+	        "Levels" "20"
+            "Toggleable" "0"
+        }
+        
+        "hordebrs_attackspeed_aura"
+        {
+	        "Levels" "20"
+            "Toggleable" "0"
+        }
+        
+        "hordebrs_attackspeed_slow_aura"
+        {
+	        "Levels" "15"
             "Toggleable" "0"
         }
     }
