--- a/scripts/vscripts/spawns.kv
+++ b/scripts/vscripts/spawns.kv
@@ -8,7 +8,7 @@
             {
                 "00"
                 {
-                    "boss_unit" "npc_dota_creature_beast"
+                    "boss_unit" "npc_dota_creature_fuck_you"
 		            "Creatures"
 		            {
 		                "00"
