--- a/scripts/vscripts/HoardBRS/abilityList.kv
+++ b/scripts/vscripts/HoardBRS/abilityList.kv
@@ -131,12 +131,6 @@
             "Toggleable" "0"
         }
         
-        "lone_druid_spirit_bear_demolish"
-        {
-	        "Levels" "1"
-            "Toggleable" "0"
-        }
-        
         "mudgolem_cloak_aura"
         {
 	        "Levels" "1"
@@ -279,7 +273,7 @@
             "Toggleable" "0"
         }
                 
-        "necrolyte_heartstopper_aura_datadriven"
+        "necrolyte_heartstopper_aura"
         {
 	        "Levels" "4"
             "Toggleable" "0"
@@ -298,12 +292,6 @@
         }
         
         "faceless_void_time_lock"
-        {
-	        "Levels" "4"
-            "Toggleable" "0"
-        }
-        
-        "skeleton_king_vampiric_aura"
         {
 	        "Levels" "4"
             "Toggleable" "0"
@@ -358,12 +346,6 @@
         }
         
         "omniknight_degen_aura"
-        {
-	        "Levels" "4"
-            "Toggleable" "0"
-        }
-        
-        "omniknight_degen_aura_datadriven"
         {
 	        "Levels" "4"
             "Toggleable" "0"
@@ -521,7 +503,7 @@
         
         "tusk_walrus_punch"
         {
-	        "Levels" "4"
+	        "Levels" "3"
             "Toggleable" "1"
         }
         
@@ -542,37 +524,19 @@
             "Toggleable" "1"
         } 
         
-        "bloodseeker_thirst_datadriven"
+        "bloodseeker_thirst"
         {
 	        "Levels" "4"
             "Toggleable" "0"
         }
         
-        "treant_entangle_datadriven"
-        {
-	        "Levels" "4"
-            "Toggleable" "0"
-        } 
-        
-        "terrorblade_zeal_datadriven"
-        {
-	        "Levels" "4"
-            "Toggleable" "0"
-        } 
-        
-        "antimage_mana_break_datadriven"
-        {
-	        "Levels" "4"
-            "Toggleable" "0"
-        } 
-        
-        "huskar_burning_spear_datadriven"
+        "huskar_burning_spear"
         {
 	        "Levels" "4"
             "Toggleable" "1"
         } 
         
-        "drow_ranger_frost_arrows_datadriven"
+        "drow_ranger_frost_arrows"
         {
 	        "Levels" "4"
             "Toggleable" "1"
