--- a/scripts/vscripts/maplogic/settings.kv
+++ b/scripts/vscripts/maplogic/settings.kv
@@ -2,18 +2,10 @@
 {
 	"horde_2p"
 	{
-	    "midLaneSpawner"            {
-	        "1" "spawner1"
-	        "2" "spawner1"
-	        "3" "spawner1"
-            "4" "spawner2"
-            "5" "spawner2"
-	        "6" "spawner5"
-        }
-        
-	    "midLaneDestination"        "lane_mid_pathcorner_badguys_7"
-	    "midLaneFriendlySpawner"        "spawner7"
-	    "midLaneFriendlyDestination"    "lane_bot_pathcorner_goodguys_2"
+	    "midLaneSpawner"            "spawner1"
+	    "midLaneDestination"        "lane_mid_pathcorner_badguys_1"
+	    "midLaneFriendlySpawner"        "spawner8"
+	    "midLaneFriendlyDestination"    "lane_mid_pathcorner_goodguys_1"
 
 	    "bossSpawner"               "spawner4"
 	    "bossDestination"        "lane_mid_pathcorner_badguys_7"
@@ -22,18 +14,18 @@
     "Default"
     {
         "topLaneSpawner"            "spawner3"
-        "topLaneDestination"        "lane_top_pathcorner_badguys_4"
-        "topLaneFriendlySpawner"        "spawner12"
+        "topLaneDestination"        "lane_top_pathcorner_badguys_1"
+        "topLaneFriendlySpawner"        "spawner9"
         "topLaneFriendlyDestination"    "lane_top_pathcorner_goodguys_1"
 
         "botLaneSpawner"            "spawner2"
-        "botLaneDestination"        "lane_bot_pathcorner_badguys_4"
+        "botLaneDestination"        "lane_bot_pathcorner_badguys_1"
         "botLaneFriendlySpawner"        "spawner7"
         "botLaneFriendlyDestination"    "lane_bot_pathcorner_goodguys_2"
 
         "midLaneSpawner"            "spawner1"
-        "midLaneDestination"        "lane_mid_pathcorner_badguys_7"
-        "midLaneFriendlySpawner"        "spawner11"
+        "midLaneDestination"        "lane_mid_pathcorner_badguys_1"
+        "midLaneFriendlySpawner"        "spawner8"
         "midLaneFriendlyDestination"    "lane_mid_pathcorner_goodguys_1"
 
         "bossSpawner"               "spawner4"
