New Hoard Mode update

--- a/scripts/vscripts/maplogic/settings.kv
+++ b/scripts/vscripts/maplogic/settings.kv
@@ -10,6 +10,17 @@
 	    "bossSpawner"               "spawner4"
 	    "bossDestination"        "lane_mid_pathcorner_badguys_7"
     }
+    
+    "horde_2p_ultra"
+	  {
+	    "midLaneSpawner"            "spawner1"
+	    "midLaneDestination"        "lane_mid_pathcorner_badguys_1"
+	    "midLaneFriendlySpawner"        "spawner8"
+	    "midLaneFriendlyDestination"    "lane_mid_pathcorner_goodguys_1"
+
+	    "bossSpawner"               "spawner4"
+	    "bossDestination"        "lane_mid_pathcorner_badguys_7"
+    }
 
     "Default"
     {
